--- a/debezium-crypto-app/src/main/resources/application.yml
+++ b/debezium-crypto-app/src/main/resources/application.yml
@@ -8,6 +8,9 @@ quarkus:
     trust-all: true
   datasource:
     db-kind: postgresql
+  hibernate-orm:
+    database:
+      generation: drop-and-create
 
 "%prod":
   quarkus:
