--- a/debezium-crypto-app/src/main/resources/application.yml
+++ b/debezium-crypto-app/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 update:
-  period: 2s
+  period: 5s
 
 quarkus:
   http:
@@ -8,10 +8,13 @@ quarkus:
     trust-all: true
   datasource:
     db-kind: postgresql
-  hibernate-orm:
-    database:
-      generation: drop-and-create
-
+  flyway:
+    baseline-on-migrate: true
+    migrate-at-start: true
+  log:
+    category:
+      "io.debezium":
+        level: DEBUG
 "%prod":
   quarkus:
     kubernetes-config:
@@ -23,3 +26,10 @@ quarkus:
     kubernetes-client:
       devservices:
         enabled: false
+    flyway:
+      clean-at-start: true
+
+"%test":
+  quarkus:
+    flyway:
+      clean-at-start: true
