--- a/k8s/0001_crypto-app.yml
+++ b/k8s/0001_crypto-app.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -17,6 +18,37 @@ metadata:
     app.kubernetes.io/name: debezium-crypto-app
     app.kubernetes.io/managed-by: quarkus
   name: debezium-crypto-app
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  labels:
+    app.kubernetes.io/name: debezium-crypto-app
+    app.kubernetes.io/version: 1.0.0-SNAPSHOT
+  name: view-jobs
+rules:
+  - apiGroups:
+      - batch
+    resources:
+      - jobs
+    verbs:
+      - get
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  labels:
+    app.kubernetes.io/name: debezium-crypto-app
+    app.kubernetes.io/version: 1.0.0-SNAPSHOT
+  name: debezium-crypto-app-view-jobs
+roleRef:
+  kind: Role
+  apiGroup: rbac.authorization.k8s.io
+  name: view-jobs
+subjects:
+  - kind: ServiceAccount
+    apiGroup: ""
+    name: debezium-crypto-app
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -80,6 +112,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: QUARKUS_FLYWAY_ENABLED
+              value: "false"
           image: quay.io/jcechace/dbz-crypto-app:native-latest
           imagePullPolicy: Always
           livenessProbe:
@@ -117,4 +151,34 @@ spec:
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 10
+      initContainers:
+        - args:
+            - job
+            - debezium-crypto-app-flyway-init
+          image: groundnuty/k8s-wait-for:no-root-v1.7
+          imagePullPolicy: IfNotPresent
+          name: wait-for-flyway
       serviceAccountName: debezium-crypto-app
+---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: debezium-crypto-app-flyway-init
+spec:
+  completionMode: NonIndexed
+  template:
+    metadata: {}
+    spec:
+      containers:
+        - env:
+            - name: QUARKUS_FLYWAY_ENABLED
+              value: "true"
+            - name: QUARKUS_INIT_AND_EXIT
+              value: "true"
+          image: quay.io/jcechace/dbz-crypto-app:native-latest
+          name: debezium-crypto-app-flyway-init
+      restartPolicy: OnFailure
+      serviceAccountName: debezium-crypto-app
+
+
+
