--- a/k8s/infra/002_redis.yml
+++ b/k8s/infra/002_redis.yml
@@ -13,7 +13,7 @@ data:
     protected-mode no
     bind 0.0.0.0
     port 6379
-    loadmodule /opt/redis-stack/lib/redistimeseries.so
+    loadmodule /opt/redis-stack/lib/redistimeseries.so DUPLICATE_POLICY LAST
 ---
 apiVersion: v1
 kind: Service
