--- a/debezium-crypto-collector/pom.xml
+++ b/debezium-crypto-collector/pom.xml
@@ -16,6 +16,7 @@
     <quarkus.container-image.registry>quay.io</quarkus.container-image.registry>
     <quarkus.container-image.tag>latest</quarkus.container-image.tag>
     <quarkus.jib.platforms>linux/amd64,linux/arm64/v8</quarkus.jib.platforms>
+    <quarkus.native.container-build>true</quarkus.native.container-build>
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
     <quarkus.platform.version>3.11.0</quarkus.platform.version>
@@ -119,6 +120,20 @@
   </build>
   <profiles>
     <profile>
+      <id>arm64</id>
+      <properties>
+        <quarkus.jib.platforms>linux/arm64/v8</quarkus.jib.platforms>
+        <quarkus.container-image.tag>native-arm64-latest</quarkus.container-image.tag>
+      </properties>
+    </profile>
+    <profile>
+      <id>adm64</id>
+      <properties>
+        <quarkus.jib.platforms>linux/amd64</quarkus.jib.platforms>
+        <quarkus.container-image.tag>native-amd64-latest</quarkus.container-image.tag>
+      </properties>
+    </profile>
+    <profile>
       <id>native</id>
       <activation>
         <property>
@@ -128,7 +143,6 @@
       <properties>
         <skipITs>false</skipITs>
         <quarkus.native.enabled>true</quarkus.native.enabled>
-        <quarkus.container-image.tag>native-latest</quarkus.container-image.tag>
       </properties>
     </profile>
   </profiles>
