Fixed typo in amd64 profile name

--- a/debezium-crypto-collector/pom.xml
+++ b/debezium-crypto-collector/pom.xml
@@ -127,7 +127,7 @@
       </properties>
     </profile>
     <profile>
-      <id>adm64</id>
+      <id>amd64</id>
       <properties>
         <quarkus.jib.platforms>linux/amd64</quarkus.jib.platforms>
         <quarkus.container-image.tag>native-amd64-latest</quarkus.container-image.tag>
