--- a/k8s/0002_knative.yml
+++ b/k8s/0002_knative.yml
@@ -14,7 +14,7 @@ spec:
     template:
         spec:
             containers:
-                - image: quay.io/jcechace/dbz-crypto-collector:latest
+                - image: quay.io/jcechace/dbz-crypto-collector:native-amd64-latest
                   imagePullPolicy: IfNotPresent
                   env:
                       - name: QUARKUS_REDIS_HOSTS
