--- a/k8s/crypto-legacy/0001_postgres.yml
+++ b/k8s/crypto-legacy/0001_postgres.yml
@@ -25,6 +25,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: postgresql
+  namespace: crypto-legacy
   labels:
     app: postgresql
 spec:
