--- a/k8s/crypto-infra/0001_prometheus.yaml
+++ b/k8s/crypto-infra/0001_prometheus.yaml
@@ -11,7 +11,7 @@ data:
     scrape_configs:
       - job_name: 'server'
         static_configs:
-          - targets: ['debezium-crypto-cdcexporter-metrics:9090']
+          - targets: ['debezium-crypto-cdcexporter-metrics.crypto-demo.svc.cluster.local:9090']
 ---
 apiVersion: v1
 kind: Service
