--- a/k8s/crypto-legacy/0002_crypto-app.yml
+++ b/k8s/crypto-legacy/0002_crypto-app.yml
@@ -114,7 +114,7 @@ spec:
                   fieldPath: metadata.namespace
             - name: QUARKUS_FLYWAY_ENABLED
               value: "false"
-          image: quay.io/jcechace/dbz-crypto-app:native-adm64-latest
+          image: quay.io/jcechace/dbz-crypto-app:native-amd64-latest
           imagePullPolicy: Always
           livenessProbe:
             failureThreshold: 3
@@ -175,7 +175,7 @@ spec:
               value: "true"
             - name: QUARKUS_INIT_AND_EXIT
               value: "true"
-          image: quay.io/jcechace/dbz-crypto-app:native-adm64-latest
+          image: quay.io/jcechace/dbz-crypto-app:native-amd64-latest
           name: debezium-crypto-app-flyway-init
       restartPolicy: OnFailure
       serviceAccountName: debezium-crypto-app
