--- a/k8s/crypto-infra/grafana/0020_data-source-redis.yml
+++ b/k8s/crypto-infra/grafana/0020_data-source-redis.yml
@@ -10,6 +10,7 @@ spec:
   plugins:
     - name: redis-datasource
       version: 2.2.0
+  resyncPeriod: 5s
   datasource:
     name: Redis
     type: redis-datasource
