--- a/k8s/crypto-infra/grafana/0010_data-source-prometheus.yml
+++ b/k8s/crypto-infra/grafana/0010_data-source-prometheus.yml
@@ -7,6 +7,7 @@ spec:
   instanceSelector:
     matchLabels:
       dashboards: "debezium"
+  resyncPeriod: 5s
   datasource:
     name: prometheus-server
     type: prometheus
